fix: allow multiline cells with new package CsvHelper

--- a/Diplo.Dictionary/packages.config
+++ b/Diplo.Dictionary/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="3.3.1" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.2" targetFramework="net452" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
+  <package id="CsvHelper" version="15.0.6" targetFramework="net452" />
   <package id="Examine" version="0.1.85" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
   <package id="ImageProcessor" version="2.5.3" targetFramework="net452" />
@@ -21,6 +22,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net452" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net452" />
@@ -35,6 +37,7 @@
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.7.0" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
